--- a/platformio.ini
+++ b/platformio.ini
@@ -3,7 +3,9 @@ platform = ststm32
 board = genericSTM32F103C8
 framework = stm32cube
 lib_deps = FreeRTOS
+upload_protocol = serial
 build_flags = -IInc
     -I lib/FreeRTOS/CMSIS_RTOS
     -I lib/FreeRTOS/include
     -I lib/FreeRTOS/portable/GCC/ARM_CM3
+    -l arm_cortexM3l_math
