printando em float, aquisicao ok

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,3 +9,4 @@ build_flags = -IInc
     -I lib/FreeRTOS/include
     -I lib/FreeRTOS/portable/GCC/ARM_CM3
     -l arm_cortexM3l_math
+    -Wl,-u_printf_float
