--- a/platformio.ini
+++ b/platformio.ini
@@ -1,12 +1,13 @@
-[env:genericSTM32F103C8]
+[env:bluepill_f103c8]
 platform = ststm32
-board = genericSTM32F103C8
+board = bluepill_f103c8
 framework = stm32cube
 lib_deps = FreeRTOS
-upload_protocol = serial
+; upload_protocol = serial
 build_flags = -IInc
     -I lib/FreeRTOS/CMSIS_RTOS
     -I lib/FreeRTOS/include
     -I lib/FreeRTOS/portable/GCC/ARM_CM3
     -l arm_cortexM3l_math
     -Wl,-u_printf_float
+debug_tool = stlink
